fix: Update task card border and hover background color for improved visibility

--- a/src/modules/components/task-card/style.css
+++ b/src/modules/components/task-card/style.css
@@ -1,16 +1,20 @@
 .task-card {
-  border: 1px solid #fff4;
+  border: 1px solid transparent;
   border-radius: 0.3em;
   padding: 0.5em;
   padding-top: 0.6em;
   user-select: none;
 
   &:hover {
-    background-color: rgb(78, 90, 82);
+    background-color: #4e5a52;
   }
 
   &.completed {
     opacity: 0.6;
+  }
+
+  &:has(.expanded):not(:hover) {
+    background-color: #4e5a522a;
   }
 }
 
